# minidb_docs

./: .flake8  README.md  compareDr18.py  create_docs_files.py  create_minidb_dr18.sql  create_minidb_dr18_descriptions.sql  dr18_allwise.txt  dr18_best_brightest.txt  dr18_bhm_csc_v2.txt  dr18_bhm_efeds_veto.txt  dr18_bhm_rm_v0_2.txt  dr18_cadence.txt  dr18_cadence_epoch.txt  dr18_carton.txt  dr18_carton_to_target.txt  dr18_carton_txt.txt  dr18_cataclysmic_variables.txt  dr18_catalog.txt  dr18_catalog_to_allwise.txt  dr18_catalog_to_bhm_rm_v0_2.txt  dr18_catalog_to_panstarrs1.txt  dr18_catalog_to_sdss_dr13_photoobj_primary.txt  dr18_catalog_to_skies_v2.txt  dr18_catalog_to_skymapper_dr2.txt  dr18_catalog_to_xmm_om_suss_4_1.txt  dr18_catalogdb_version.txt  dr18_catwise2020.txt  dr18_ebosstarget_v5.txt  dr18_gaia_dr2_ruwe.txt  dr18_gaia_dr2_source.txt  dr18_gaia_dr2_wd.txt  dr18_gaiadr2_tmass_best_neighbour.txt  dr18_glimpse.txt  dr18_instrument.txt  dr18_legacy_survey_dr8.txt  dr18_magnitude.txt  dr18_mapper.txt  dr18_sagitta.txt  dr18_sdss_apogeeallstarmerge_r13.txt  dr18_sdss_dr16_qso.txt  (+16 more)
dr18/: create_minidb_dr18.sql  dr18_catalog.txt  dr18_catalog_to_bhm_efeds_veto.txt  dr18_catalog_to_catwise2020.txt  dr18_catalog_to_glimpse.txt  dr18_catalog_to_guvcat.txt  dr18_catalog_to_legacy_survey_dr8.txt  dr18_catalog_to_sdss_dr16_specobj.txt  dr18_catalog_to_supercosmos.txt  dr18_catalog_to_tic_v8.txt  dr18_catalog_to_tycho2.txt  dr18_catalog_to_uvotssc1.txt  dr18_mapper.txt  dr18_sdss_dr13_photoobj_primary.txt  dr18_sdss_dr16_specobj.txt  dr18_skies_v2.txt  dr18_supercosmos.txt  dr18_targetdb_version.txt
dr19/: create_minidb_dr19.sql  dr19_allwise.txt  dr19_carton.txt  (+117 more)
dr19.0/: dr19_bhm_spiders_clusters_superset.txt  dr19_carton.txt  dr19_catalog_to_allwise.txt  dr19_catalog_to_bhm_rm_v0.txt  dr19_catalog_to_guvcat.txt  dr19_catalog_to_marvels_dr12_star.txt  dr19_catalog_to_panstarrs1.txt  dr19_catalog_to_twomass_psc.txt  dr19_catalog_to_xmm_om_suss_4_1.txt  dr19_mangatarget.txt  dr19_mapper.txt  dr19_mastar_goodvisits.txt  dr19_opsdb_apo_camera_frame.txt  dr19_revised_magnitude.txt  dr19_sagitta.txt  dr19_sdss_id_to_catalog.txt  dr19_sdssv_boss_spall.txt  dr19_skymapper_dr2.txt  dr19_targeting_generation_to_version.txt  dr19_twomass_psc.txt  dr19_tycho2.txt
dr19.1/: dr19_assignment.txt  dr19_bhm_csc.txt  dr19_bhm_rm_tweaks.txt  dr19_bhm_rm_v0.txt  dr19_bhm_spiders_clusters_superset.txt  dr19_erosita_superset_agn.txt  dr19_gaia_assas_sn_cepheids.txt  dr19_marvels_dr11_star.txt  dr19_positioner_status.txt  dr19_sdss_id_flat.txt  dr19_sdssv_boss_conflist.txt  dr19_sdssv_boss_spall.txt  dr19_sdssv_plateholes_meta.txt  dr19_targeting_generation_to_carton.txt  dr19_targeting_generation_to_version.txt  dr19_unwise.txt
(+163 files in other folders)
