[project]
authors = [{name = "José Sánchez-Gallego", email = "gallegoj@uw.edu"}]
description = "Table descriptions for the contents of minidb"
license = {text = "BSD-3-Clause"}
name = "minidb-docs"
readme = "README.md"
version = "0.1.0"

requires-python = ">=3.12"

dependencies = [
  "adbc-driver-postgresql>=1.10.0",
  "click>=8.3.1",
  "jinja2>=3.1.6",
  "oyaml>=1.0",
  "polars>=1.38.1",
  "rich>=14.2.0",
]

[project.optional-dependencies]
all = [
  "sdss-access",
  "sdss-datamodel[gen]",
  "sdssdb>=0.13.5",
  "sdsstools>=1.9.6",
]


[project.scripts]
minidb-docs = "minidb_docs.__main__:minidb_docs_cli"

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "ipython>=9.8.0",
  "ruff>=0.14.7",
]

[tool.uv.sources]
sdss-datamodel = {git = "ssh://git@github.com/sdss/datamodel", branch = "main"}
sdss-access = {git = "ssh://git@github.com/sdss/sdss_access", branch = "main"}

[tool.ruff]
exclude = ["typings/"]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["minidb_docs"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
sdss = ["sdsstools", "sdssdb", "sdss_access", "tree", "datamodel"]
typing = ["typing"]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.9,<0.11.0"]
